--- a/authDemo/src/main/resources/application.properties
+++ b/authDemo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/tcsnov?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/authDB?useSSL=false
 spring.datasource.username= dockeruser
 spring.datasource.password= root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
