--- a/authDemoTwo/src/main/resources/application.properties
+++ b/authDemoTwo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3307/authDB?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3307/authDB
 spring.datasource.username= dockeruser
 spring.datasource.password= root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 #app properties
 authdemo.app.jwtSecret=tcssecretkey
 authdemo.app.jwtExpirationMs=86400000
